app-test/testdata/typesystem/neg/type-comparison-list-type-with-any-type/check/cmp2.check
Error in "testdata/typesystem/neg/type-comparison-list-type-with-any-type/src/cmp.cal" on line 5:
           OUT <-- [1, 2, 3] = [1, 2, 3, 4]; // error
                   ^^^^^^^^^^^^^^^^^^^^^^^^
Incomparable types; List(type:uint(size=2), size=3) cannot be compared with List(type:uint(size=3), size=4).